[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/healthbar/ammo_player.png" type="Texture" id=1]
[ext_resource path="res://assets/healthbar/base_player.png" type="Texture" id=2]
[ext_resource path="res://assets/healthbar/health_player.png" type="Texture" id=3]
[ext_resource path="res://assets/healthbar/base_ammo_player.png" type="Texture" id=4]
[ext_resource path="res://assets/vignette/vignette.png" type="Texture" id=5]
[ext_resource path="res://scenes/ui/theme.tres" type="Theme" id=6]
[ext_resource path="res://scripts/GameHUD.gd" type="Script" id=7]

[sub_resource type="Animation" id=1]
resource_name = "FadeVignette"
tracks/0/type = "value"
tracks/0/path = NodePath("Vignette:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="GameHUD" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 6 )
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthBar" type="TextureProgress" parent="."]
margin_left = 30.0
margin_top = 30.0
margin_right = 575.0
margin_bottom = 106.0
rect_scale = Vector2( 0.35, 0.35 )
value = 1.0
texture_under = ExtResource( 2 )
texture_progress = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AmmoBar" type="TextureProgress" parent="."]
margin_left = 30.0
margin_top = 30.0
margin_right = 594.0
margin_bottom = 142.0
rect_scale = Vector2( 0.35, 0.35 )
value = 100.0
texture_under = ExtResource( 4 )
texture_progress = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StatusBar" type="ColorRect" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -25.0
color = Color( 0.2, 0.2, 0.2, 0.501961 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Labels" type="HBoxContainer" parent="StatusBar"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_right = -10.0
custom_constants/separation = 15
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level" type="Label" parent="StatusBar/Labels"]
margin_top = 4.0
margin_right = 49.0
margin_bottom = 20.0
text = "Level 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="StatusBar/Labels"]
margin_left = 64.0
margin_top = 4.0
margin_right = 120.0
margin_bottom = 20.0
text = "Score: 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FPS" type="Label" parent="StatusBar/Labels"]
margin_left = 135.0
margin_top = 4.0
margin_right = 174.0
margin_bottom = 20.0
text = "0 FPS"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Vignette" type="TextureRect" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProgressTween" type="Tween" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/FadeVignette = SubResource( 1 )
